Fix curso and categoria component templates. Add css for table rows - vertical align at middle.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -74,6 +74,15 @@ header {
 	flex-flow: row wrap;
 }
 
+/*bootstrap-vue customize*/
+.table td, .table th {
+	vertical-align: middle;
+}
+
 footer{
 	/*margin-top: 200px;*/
+}
+
+.admin-alert {
+	margin: 10px;
 }
